--- a/templates/frontend/partials/footer.html
+++ b/templates/frontend/partials/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
         <!-- Newsletter Section Start -->
     <section class="newsletter-section section-b-space">
         <div class="container-fluid-lg">
@@ -84,8 +85,8 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6">
                         <div class="footer-logo">
                             <div class="theme-logo">
-                                <a href="index.html">
-                                    <img src="../assets/images/logo/1.png" class="blur-up lazyload" alt="">
+                                <a href="{% url 'home' %}">
+                                    <img src="{% static  'frontend/assets/images/logo/logo.png' %}" class="blur-up lazyload" alt="">
                                 </a>
                             </div>
 
@@ -100,7 +101,7 @@
                                     </li>
                                     <li>
                                         <i data-feather="mail"></i>
-                                        <a href="javascript:void(0)">support@fastkart.com</a>
+                                        <a href="mailto:support@oyabuynow.com">support@oyabuynow.com</a>
                                     </li>
                                 </ul>
                             </div>
