--- a/templates/backend/order-list.html
+++ b/templates/backend/order-list.html
@@ -39,7 +39,7 @@
                                                         <td>Paystack</td>
 
                                                         <td class="order-success">
-                                                            <span>{{order.status}}</span>
+                                                            <span>{{order.overall_status}}</span>
                                                         </td>
 
                                                         <td>{{ order.total_cost|naira }}</td>
@@ -53,12 +53,12 @@
                                                                 </li>
 
 
-                                                                <li>
-                                                                    <a class="btn btn-sm btn-solid text-white"
-                                                                        href="order-tracking.html">
-                                                                        Tracking
-                                                                    </a>
-                                                                </li>
+<!--                                                                <li>-->
+<!--                                                                    <a class="btn btn-sm btn-solid text-white"-->
+<!--                                                                        href="order-tracking.html">-->
+<!--                                                                        Tracking-->
+<!--                                                                    </a>-->
+<!--                                                                </li>-->
                                                             </ul>
                                                         </td>
                                                     </tr>
