--- a/templates/backend/order-detail.html
+++ b/templates/backend/order-detail.html
@@ -12,13 +12,13 @@
                                 <div class="card-body">
                                     <div class="title-header title-header-block package-card">
                                         <div>
-                                            <h5>Order #36648</h5>
+                                            <h5>Order {{order.ref}}</h5>
                                         </div>
                                         <div class="card-order-section">
                                             <ul>
-                                                <li>October 21, 2021 at 9:08 pm</li>
-                                                <li>6 items</li>
-                                                <li>Total $5,882.00</li>
+                                                <li>{{order.created_at}}</li>
+                                                <li>{{order.items.count}} items</li>
+                                                <li>Total {{order.total_cost|naira}}</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -31,76 +31,42 @@
                                                             <tr>
                                                                 <th colspan="2">Items</th>
                                                                 <th class="text-end" colspan="2">
-                                                                    <a href="javascript:void(0)"
-                                                                        class="theme-color">Edit
-                                                                        Items</a>
+
                                                                 </th>
                                                             </tr>
                                                         </thead>
 
                                                         <tbody>
+                                                            {% for item in order.items.all %}
                                                             <tr class="table-order">
                                                                 <td>
                                                                     <a href="javascript:void(0)">
-                                                                        <img src="assets/images/profile/1.jpg"
-                                                                            class="img-fluid blur-up lazyload" alt="">
+                                                                        {% with item.product.product_media.first as first_media %}
+                                                                        {% if first_media %}
+                                                                        <img
+                                                                          src="{{ first_media.image.url }}"
+                                                                          class="img-fluid blur-up lazyload"
+                                                                          alt="{{ item.product.name }}"
+                                                                        />
+                                                                        {% endif %}
+                                                                        {% endwith %}
                                                                     </a>
                                                                 </td>
                                                                 <td>
                                                                     <p>Product Name</p>
-                                                                    <h5>Outwear & Coats</h5>
+                                                                    <h5>{{item.product.name}}</h5>
                                                                 </td>
                                                                 <td>
                                                                     <p>Quantity</p>
-                                                                    <h5>1</h5>
+                                                                    <h5>{{item.quantity}}</h5>
                                                                 </td>
                                                                 <td>
                                                                     <p>Price</p>
-                                                                    <h5>$63.54</h5>
+                                                                    <h5>{{item.price|naira}}</h5>
                                                                 </td>
                                                             </tr>
+                                                            {% endfor %}
 
-                                                            <tr class="table-order">
-                                                                <td>
-                                                                    <a href="javascript:void(0)">
-                                                                        <img src="assets/images/profile/2.jpg"
-                                                                            class="img-fluid blur-up lazyload" alt="">
-                                                                    </a>
-                                                                </td>
-                                                                <td>
-                                                                    <p>Product Name</p>
-                                                                    <h5>Slim Fit Plastic Coat</h5>
-                                                                </td>
-                                                                <td>
-                                                                    <p>Quantity</p>
-                                                                    <h5>5</h5>
-                                                                </td>
-                                                                <td>
-                                                                    <p>Price</p>
-                                                                    <h5>$63.54</h5>
-                                                                </td>
-                                                            </tr>
-
-                                                            <tr class="table-order">
-                                                                <td>
-                                                                    <a href="javascript:void(0)">
-                                                                        <img src="assets/images/profile/3.jpg"
-                                                                            class="img-fluid blur-up lazyload" alt="">
-                                                                    </a>
-                                                                </td>
-                                                                <td>
-                                                                    <p>Product Name</p>
-                                                                    <h5>Men's Sweatshirt</h5>
-                                                                </td>
-                                                                <td>
-                                                                    <p>Quantity</p>
-                                                                    <h5>1</h5>
-                                                                </td>
-                                                                <td>
-                                                                    <p>Price</p>
-                                                                    <h5>$63.54</h5>
-                                                                </td>
-                                                            </tr>
                                                         </tbody>
 
                                                         <tfoot>
@@ -109,34 +75,26 @@
                                                                     <h5>Subtotal :</h5>
                                                                 </td>
                                                                 <td>
-                                                                    <h4>$55.00</h4>
+                                                                    <h4>{{order.total_cost|naira}}</h4>
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="table-order">
-                                                                <td colspan="3">
-                                                                    <h5>Shipping :</h5>
-                                                                </td>
-                                                                <td>
-                                                                    <h4>$12.00</h4>
-                                                                </td>
-                                                            </tr>
+<!--                                                            <tr class="table-order">-->
+<!--                                                                <td colspan="3">-->
+<!--                                                                    <h5>Shipping :</h5>-->
+<!--                                                                </td>-->
+<!--                                                                <td>-->
+<!--                                                                    <h4>$12.00</h4>-->
+<!--                                                                </td>-->
+<!--                                                            </tr>-->
 
-                                                            <tr class="table-order">
-                                                                <td colspan="3">
-                                                                    <h5>Tax(GST) :</h5>
-                                                                </td>
-                                                                <td>
-                                                                    <h4>$10.00</h4>
-                                                                </td>
-                                                            </tr>
 
                                                             <tr class="table-order">
                                                                 <td colspan="3">
                                                                     <h4 class="theme-color fw-bold">Total Price :</h4>
                                                                 </td>
                                                                 <td>
-                                                                    <h4 class="theme-color fw-bold">$6935.00</h4>
+                                                                    <h4 class="theme-color fw-bold">{{order.total_cost|naira}}</h4>
                                                                 </td>
                                                             </tr>
                                                         </tfoot>
@@ -149,23 +107,21 @@
                                                     <div class="row g-4">
                                                         <h4>summery</h4>
                                                         <ul class="order-details">
-                                                            <li>Order ID: 5563853658932</li>
-                                                            <li>Order Date: October 22, 2018</li>
-                                                            <li>Order Total: $907.28</li>
+                                                            <li>Order ID: {{order.ref}}</li>
+                                                            <li>Order Date: {{order.created_at|date:"F j, Y" }}</li>
+                                                            <li>Order Total: {{order.total_cost|naira}}</li>
                                                         </ul>
 
                                                         <h4>shipping address</h4>
                                                         <ul class="order-details">
-                                                            <li>Gerg Harvell</li>
-                                                            <li>568, Suite Ave.</li>
-                                                            <li>Austrlia, 235153 Contact No. 48465465465</li>
+                                                            <li>{{order.first_name}} {{order.last_name}}</li>
+                                                            <li>{{order.address}}</li>
+                                                            <li>{{order.lga}}, {{order.state}}</li>
                                                         </ul>
 
                                                         <div class="payment-mode">
                                                             <h4>payment method</h4>
-                                                            <p>Pay on Delivery (Cash/Card). Cash on delivery (COD)
-                                                                available. Card/Net banking acceptance subject to device
-                                                                availability.</p>
+                                                            <p>{{order.payment_method}}</p>
                                                         </div>
 
                                                         <div class="delivery-sec">
