--- a/templates/frontend/partials/footer.html
+++ b/templates/frontend/partials/footer.html
@@ -52,7 +52,7 @@
                                 </div>
 
                                 <div class="service-detail">
-                                    <h5>Free Delivery For Order Over $50</h5>
+                                    <h5>Free Delivery For Order Over ₦500,000</h5>
                                 </div>
                             </div>
 
@@ -229,7 +229,7 @@
 
             <div class="sub-footer section-small-space">
                 <div class="reserve">
-                    <h6 class="text-content">©2022 Fastkart All rights reserved</h6>
+                    <h6 class="text-content">©2022 OyaBuyNow All rights reserved</h6>
                 </div>
 
                 <div class="payment">
