Refactored Vendor Dashboard

--- a/templates/frontend/onboard-vendor.html
+++ b/templates/frontend/onboard-vendor.html
@@ -262,7 +262,7 @@
         <div class="seller-title mb-4">
             {% if user.vendor_profile == "Approved" %}
             <h2>You are already registered as a Vendor</h2>
-            <p>Go to your <a href="{% url 'vendor-dashboard' %}">Vendor Dashboard</a></p>
+            <p>Go to your <a href="{% url 'vendor-dashboard-home' %}">Vendor Dashboard</a></p>
 
             {% else %}
             <h2>Your vendor registration is being reviewed</h2>
