--- a/templates/frontend/partials/base.html
+++ b/templates/frontend/partials/base.html
@@ -257,7 +257,7 @@
                                                     <li class="product-box-contain">
                                                         <i></i>
                                                         {% if user.user_type == "Vendor" %}
-                                                        <a href="{% url 'vendor-dashboard' %}">Dashboard</a>
+                                                        <a href="{% url 'vendor-dashboard-home' %}">Dashboard</a>
                                                         {% else %}
                                                         <a href="{% url 'dashboard' %}">Dashboard</a>
                                                         {% endif %}
